deploy: 8cf987104d542de0ff5201f029e9d5cc652f3ea3

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script src="https://kit.fontawesome.com/89e255c4f2.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Karla:wght@400;700&display=swap" rel="stylesheet">
     
     <title>Tenzies Game</title>
-    <script type="module" crossorigin src="/Tenzies/assets/index.9bba699b.js"></script>
-    <link rel="stylesheet" href="/Tenzies/assets/index.47b06561.css">
+    <script type="module" crossorigin src="/Tenzies/assets/index.2c0bcae4.js"></script>
+    <link rel="stylesheet" href="/Tenzies/assets/index.87cc7097.css">
   </head>
   <body>
     <div id="root"></div>
